# Dict2FlashcardsQT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  classes.cpp  interpreter.cpp  interpreter.h  scaner.cpp  scaner.h
client/lib/plugin_wrappers/: CMakeLists.txt
client/lib/plugin_wrappers/audio/: AudioPluginWrapper.cpp  AudioPluginWrapper.h  AudioPluginWrapper_tests.cpp  CMakeLists.txt  IAudioPluginWrapper.h
client/lib/plugin_wrappers/basic/: BasicPluginWrapper.cpp  BasicPluginWrapper.h  BasicPluginWrapper_tests.cpp  CMakeLists.txt  IBasicPluginWrapper.h
client/lib/plugin_wrappers/common/: CMakeLists.txt  Card.cpp  Card.h  LoadResult.h  parse_tags_tests.cpp
client/lib/plugin_wrappers/format_processor/: CMakeLists.txt  FormatProcessorPluginWrapper.cpp  FormatProcessorPluginWrapper.h  FormatProcessorPluginWrapper_tests.cpp  IFormatProcessorPluginWrapper.h
client/lib/plugin_wrappers/image/: CMakeLists.txt  IImagePluginWrapper.h  ImagePluginWrapper.cpp  ImagePluginWrapper.h  ImagePluginWrapper_tests.cpp
client/lib/plugin_wrappers/sentence/: CMakeLists.txt  ISentencePluginWrapper.h  SentencePluginWrapper.cpp  SentencePluginWrapper.h  SentencePluginWrapper_tests.cpp
client/lib/plugin_wrappers/src/: BasicPluginWrapper.cpp  ImagePluginWrapper.cpp  WordPluginWrapper.cpp
client/lib/plugin_wrappers/tests/: CMakeLists.txt
client/lib/plugin_wrappers/word/: CMakeLists.txt  IWordPluginWrapper.h  WordPluginWrapper.cpp  WordPluginWrapper.h  WordPluginWrapper_tests.cpp
python_tests/: CMakeLists.txt
qt/: AudioPlayer.hpp  AudioPlayer.ui  AudioWidget.hpp  AudioWidget.ui  CMakeLists.txt  Deck.hpp  ExamplesWidget.cpp  ExamplesWidget.hpp  IDeck.h  ImagesWidget.cpp  ImagesWidget.hpp  ImagesWidget.ui  audio_model.cpp  audio_model.h  audiolinks.cpp  audiolinks.h  card.h  deck.h  deck_model.cpp  deck_model.h  deckmock.cpp  deckmock.h  examples_model.cpp  examples_model.h  image_links.cpp  image_links.h  images_model.cpp  images_model.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.pro  word_cards.cpp  word_cards.h
qt/Downloader/: CMakeLists.txt  Downloader.cpp  Downloader.hpp
qt/Models/: CMakeLists.txt
qt/Models/DeckModel/: CMakeLists.txt  Deck.cpp  Deck.hpp  IDeck.h  deck_model.cpp
qt/Models/SavedDeckModel/: CMakeLists.txt  SavedDeckModel.cpp  SavedDeckModel.hpp
qt/Models/WordCards/: CMakeLists.txt
qt/Widgets/: CMakeLists.txt
qt/Widgets/Audio/: CMakeLists.txt
qt/Widgets/Audio/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt
qt/Widgets/Audio/AudioViewer/: AudioWidget.cpp  AudioWidget.hpp  CMakeLists.txt
qt/Widgets/AudiosWidget/: AudiosWidget.cpp  AudiosWidget.hpp  AudiosWidget.ui  CMakeLists.txt
qt/Widgets/ExamplesViewer/: CMakeLists.txt  ExamplesWidget.cpp  ExamplesWidget.hpp  ExamplesWidget.ui
qt/Widgets/ImagesViewer/: CMakeLists.txt  ImagesWidget.cpp  ImagesWidget.hpp
qt/Widgets/ImagesWidget/: CMakeLists.txt  ImagesWWidget.hpp  ImagesWidget.cpp  ImagesWidget.hpp  ImagesWidget.ui
qt/Widgets/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/Widgets/Player/: CMakeLists.txt  Player.cpp  Player.hpp  Player.ui
qt/Widgets/SentencesWidget/: CMakeLists.txt  SentencesWidget.cpp  SentencesWidget.hpp  SentencesWidget.ui
server/: CMakeLists.txt  main.cpp
server/lib/: CMakeLists.txt
server/lib/PyExceptionInfo/: CMakeLists.txt
server/lib/connection/: CMakeLists.txt  connection.cpp  connection.hpp
server/lib/containers/: CMakeLists.txt  containers.cpp  containers.hpp
server/lib/network/: CMakeLists.txt
server/lib/network/ResponseGenerators/: CMakeLists.txt  ResponseGenerators.cpp  ResponseGenerators.hpp  response_generators.cpp  response_generators.hpp
server/lib/network/Server/: CMakeLists.txt  Server.cpp  Server.hpp  server.cpp  server.hpp
server/lib/network/Session/: CMakeLists.txt  Session.cpp  Session.hpp  session.hpp
server/lib/plugins/: CMakeLists.txt
server/lib/plugins/Container/: CMakeLists.txt  Container.cpp  Container.hpp
server/lib/plugins/Media/: CMakeLists.txt  Media.hpp
server/lib/plugins/PluginTypesLocations/: CMakeLists.txt  PluginsDestinations.cpp  PluginsDestinations.hpp
server/lib/plugins/PluginTypesLocationsConfig/: CMakeLists.txt  PluginTypesLocationsConfig.cpp  PluginTypesLocationsConfig.hpp
server/lib/plugins/PluginsBundle/: CMakeLists.txt  PluginsBundle.cpp  PluginsBundle.hpp
server/lib/plugins/PluginsLoader/: CMakeLists.txt  PluginsLoader.hpp
server/lib/plugins/PluginsProvider/: CMakeLists.txt  PluginsProvider.cpp  PluginsProvider.hpp
server/lib/plugins/PyExceptionInfo/: CMakeLists.txt  PyExceptionInfo.cpp  PyExceptionInfo.hpp
server/lib/plugins/wrappers/: CMakeLists.txt
server/lib/plugins_bundle/: CMakeLists.txt  plugins_bundle.hpp
server/lib/plugins_loader/: CMakeLists.txt  plugins_loader.hpp
server/lib/plugins_provider/: CMakeLists.txt  plugins_provider.cpp  plugins_provider.hpp
server/lib/query_language/: CMakeLists.txt  classes.cpp  classes.h  interpreter.cpp  interpreter.h  main.cpp  parcer.cpp  parcer.h  querying.cpp  querying.hpp  scaner.cpp  scaner.h
server/lib/query_language/include/: classes.hpp  exception.hpp  include_libs.hpp  interpreter.hpp  parcer.hpp  parser.hpp  querying.hpp  scaner.hpp
server/lib/query_language/query_lang_tests/: CMakeLists.txt
server/lib/query_language/src/: main.cpp  (+7 more)
server/lib/response_generators/: CMakeLists.txt  response_generators.cpp  response_generators.hpp
server/lib/server/: CMakeLists.txt  server.cpp  server.hpp
server/lib/session/: CMakeLists.txt  session.cpp
server/lib/wrappers/: CMakeLists.txt  wrappers.hpp
server/test_client/: CMakeLists.txt  deck.apkg  deck.json
server/test_client/Sender/: CMakeLists.txt
server/test_client/tests/: audios_provider_test.cpp  definitions_provider_test.cpp  format_processor_test.cpp  sentences_provider_test.cpp
src/plugin_wrappers/tests/: CMakeLists.txt
test_client/tests/: CMakeLists.txt  audios_provider_test.cpp  definitions_provider_test.cpp  format_processor_test.cpp  images_provider_test.cpp  sentences_provider_test.cpp
(+183 files in other folders)
